# Methods-for-solving-SLAE

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TDMATRIX  cmake_install.cmake
Task2/: CMakeLists.txt  matrix.h  test.cpp
src/: TDMatrix.h  test.cpp
